cmake_minimum_required(VERSION 3.20)

project(minesweeper)

set(CMAKE_CXX_STANDARD 14)

set(SFML_DIR "C:/Libraries/SFML-2.5.1/lib/cmake/SFML")
find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)


add_executable (minesweeper minesweeper.cpp Button.cpp GameState.cpp Tile.cpp Toolbox.cpp)
target_link_libraries(minesweeper sfml-graphics sfml-audio)

